--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">UberClone</string>
+    <string name="app_name">ExpertsConnect</string>
 
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
 
